Mon Nov 24 02:02:59 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (must_respond_to): preserve encodings of variable name and
	  class name in warning message.

Sun Nov 23 10:46:23 2014  Eric Wong  <e@80x24.org>

	* internal.h (struct rb_execarg): 160 => 144 bytes on x86-64
	* ruby.c (struct load_file_arg): 48 => 40 bytes on x86-64
	* vm_args.c (struct args_info): ditto

Sun Nov 23 07:46:54 2014  Andy Maloney  <asmaloney@gmail.com>

	* io.c (rb_io_sysread): Remove redundant assignment of 'n'.
	  [Fix GH-767]

Sat Nov 22 09:48:33 2014  Tanaka Akira  <akr@fsij.org>

	* tool/make-snapshot: Specify PWD macro for make.
	  PWD environment variable may not exist.

Fri Nov 21 11:58:58 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/resolv.rb: fall back if canonicalization fails.
	  Thanks Vit Ondruch for the patch!  [ruby-core:65836]

	* test/resolv/test_dns.rb: test for patch

Sat Nov 22 01:11:53 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_mod_const_get, rb_mod_const_defined): ditto.

	* variable.c (rb_const_missing, rb_mod_const_missing): call
	  const_missing without new ID to get rid of inadvertent ID
	  creation.

Fri Nov 21 19:32:57 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk (ext/ripper/ripper.c): revert about srcdir and top_srcdir.

	* common.mk (ext/ripper/ripper.c): use $(PWD) for Unix,
	  $(MAKEDIR) for Windows.

Fri Nov 21 18:12:37 2014  Tanaka Akira  <akr@fsij.org>

	* tool/update-deps: Refactored.

Fri Nov 21 14:25:40 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (top_srcdir): added because lacking this macro
	  causes build error at r48526.

Fri Nov 21 12:00:58 2014  Tanaka Akira  <akr@fsij.org>

	* tool/update-deps (in_makefile): Use FILES_NEED_VPATH and
	  FILES_CONFUSING.

	* ext/objspace/extconf.rb: Add VPATH for id.h

Fri Nov 21 09:10:23 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (ext/ripper/ripper.c): fix dependencies for the case